lexion_lang/tests/snapshots/x86_smoke__x86_reports_unsupported_stack_and_indirect_aggregates.snap
---
source: lexion_lang/tests/x86_smoke.rs
expression: "compile_x86_error(\"backend/x86_unsupported_stack_and_indirect_aggregates.lex\").join(\"\\n\")"
snapshot_kind: text
---
  x x86 backend does not support stack-passed aggregate ABI values yet: (i32, i32, i32)
   ,-[tests/fixtures/backend/x86_unsupported_stack_and_indirect_aggregates.lex:1:4]
 1 | fn unsupported(
   :    ^^^^^|^^^^^
   :         `-- here
 2 |     first: i32,
   `----
