lexion_lang/tests/snapshots/x86_smoke__x86_reports_unsupported_string_parameters.snap
---
source: lexion_lang/tests/x86_smoke.rs
expression: "compile_x86_error(\"backend/x86_unsupported_string_parameter.lex\").join(\"\\n\")"
snapshot_kind: text
---
  x x86 backend does not support string values yet: &str
   ,-[tests/fixtures/backend/x86_unsupported_string_parameter.lex:1:4]
 1 | fn take(value: &str) -> i32 {
   :    ^^|^
   :      `-- here
 2 |     return 0;
   `----

  x x86 backend does not support string values yet: &str
   ,-[tests/fixtures/backend/x86_unsupported_string_parameter.lex:6:12]
 5 | fn main() -> i32 {
 6 |     return take("hello");
   :            ^^^^^^|^^^^^^
   :                  `-- here
 7 | }
   `----
