lexion_lang/tests/snapshots/x86_smoke__x86_reports_unsupported_string_returns.snap
---
source: lexion_lang/tests/x86_smoke.rs
assertion_line: 233
expression: "compile_x86_error(\"backend/x86_unsupported_string_return.lex\").join(\"\\n\")"
snapshot_kind: text
---
  x x86 backend does not support string values yet: &str
   ,-[tests/fixtures/backend/x86_unsupported_string_return.lex:6:17]
 5 | fn main() -> &str {
 6 |     let value = make();
   :                 ^^^|^^
   :                    `-- here
 7 |     return value;
   `----
