lexion_lang/tests/snapshots/x86_smoke__x86_reports_unsupported_string_values.snap
---
source: lexion_lang/tests/x86_smoke.rs
assertion_line: 112
expression: "compile_x86_error(\"backend/x86_unsupported_string.lex\").join(\"\\n\")"
snapshot_kind: text
---
  x x86 backend does not support string values yet: &str
   ,-[tests/fixtures/backend/x86_unsupported_string.lex:1:4]
 1 | fn main() -> &str {
   :    ^^|^
   :      `-- here
 2 |     return "hello";
   `----

  x x86 backend does not support string values yet: &str
   ,-[tests/fixtures/backend/x86_unsupported_string.lex:2:5]
 1 | fn main() -> &str {
 2 |     return "hello";
   :     ^^^^^^^|^^^^^^^
   :            `-- here
 3 | }
   `----
