lexion_lang/tests/snapshots/x86_smoke__x86_reports_unsupported_struct_values.snap
---
source: lexion_lang/tests/x86_smoke.rs
expression: "compile_x86_error(\"backend/x86_unsupported_struct.lex\").join(\"\\n\")"
---
  x x86 backend does not support struct values yet: Point
   ,-[tests/fixtures/backend/x86_unsupported_struct.lex:6:4]
 5 | 
 6 | fn get_x(point: Point) -> i32 {
   :    ^^|^^
   :      `-- here
 7 |     return point.x;
   `----

  x x86 backend does not support member access yet
   ,-[tests/fixtures/backend/x86_unsupported_struct.lex:7:12]
 6 | fn get_x(point: Point) -> i32 {
 7 |     return point.x;
   :            ^^^|^^^
   :               `-- here
 8 | }
   `----
