lexion_lang/tests/snapshots/x86_smoke__x86_reports_unsupported_tuple_parameters.snap
---
source: lexion_lang/tests/x86_smoke.rs
expression: "compile_x86_error(\"backend/x86_unsupported_tuple.lex\").join(\"\\n\")"
snapshot_kind: text
---
  x x86 backend does not support register-pair aggregate ABI values yet: (i32, bool, i32)
   ,-[tests/fixtures/backend/x86_unsupported_tuple.lex:1:4]
 1 | fn first(value: (i32, bool, i32)) -> i32 {
   :    ^^|^^
   :      `-- here
 2 |     return value.0;
   `----
