lexion_lang/tests/snapshots/x86_smoke__x86_smoke_aggregate_reference_places.snap
---
source: lexion_lang/tests/x86_smoke.rs
expression: "compile_x86(\"backend/x86_aggregate_reference_places.lex\")"
---
.intel_syntax noprefix
.text
.global main
main:
# fn main() -> i32 {
  push rbp
  mov rbp, rsp
  sub rsp, 128
#     let value = Triple { first: 1, second: 2, third: 3 };
  mov eax, 1
  mov DWORD PTR [rbp-20], eax
  mov eax, 2
  mov DWORD PTR [rbp-16], eax
  mov eax, 3
  mov DWORD PTR [rbp-12], eax
  mov eax, DWORD PTR [rbp-20]
  mov DWORD PTR [rbp-116], eax
  mov eax, DWORD PTR [rbp-20+4]
  mov DWORD PTR [rbp-116+4], eax
  mov eax, DWORD PTR [rbp-20+8]
  mov DWORD PTR [rbp-116+8], eax
#     let reference = &value;
  lea rax, [rbp-116]
  mov QWORD PTR [rbp-32], rax
  mov rax, QWORD PTR [rbp-32]
  mov QWORD PTR [rbp-104], rax
#     let live = 10;
  mov eax, 10
#     let copy = *reference;
  push rax
  mov rdx, QWORD PTR [rbp-104]
  mov eax, DWORD PTR [rdx]
  mov DWORD PTR [rbp-44], eax
  mov eax, DWORD PTR [rdx+4]
  mov DWORD PTR [rbp-44+4], eax
  mov eax, DWORD PTR [rdx+8]
  mov DWORD PTR [rbp-44+8], eax
  pop rax
  push rax
  mov eax, DWORD PTR [rbp-44]
  mov DWORD PTR [rbp-80], eax
  mov eax, DWORD PTR [rbp-44+4]
  mov DWORD PTR [rbp-80+4], eax
  mov eax, DWORD PTR [rbp-44+8]
  mov DWORD PTR [rbp-80+8], eax
  pop rax
#     *reference = Triple { first: 4, second: 5, third: 6 };
  push rax
  mov eax, 4
  mov DWORD PTR [rbp-56], eax
  pop rax
  push rax
  mov eax, 5
  mov DWORD PTR [rbp-52], eax
  pop rax
  push rax
  mov eax, 6
  mov DWORD PTR [rbp-48], eax
  pop rax
  push rax
  mov rdx, QWORD PTR [rbp-104]
  mov eax, DWORD PTR [rbp-56]
  mov DWORD PTR [rdx], eax
  mov eax, DWORD PTR [rbp-56+4]
  mov DWORD PTR [rdx+4], eax
  mov eax, DWORD PTR [rbp-56+8]
  mov DWORD PTR [rdx+8], eax
  pop rax
#     let loaded = *reference;
  push rax
  mov rdx, QWORD PTR [rbp-104]
  mov eax, DWORD PTR [rdx]
  mov DWORD PTR [rbp-68], eax
  mov eax, DWORD PTR [rdx+4]
  mov DWORD PTR [rbp-68+4], eax
  mov eax, DWORD PTR [rdx+8]
  mov DWORD PTR [rbp-68+8], eax
  pop rax
  push rax
  mov eax, DWORD PTR [rbp-68]
  mov DWORD PTR [rbp-92], eax
  mov eax, DWORD PTR [rbp-68+4]
  mov DWORD PTR [rbp-92+4], eax
  mov eax, DWORD PTR [rbp-68+8]
  mov DWORD PTR [rbp-92+8], eax
  pop rax
#     return live + copy.first + loaded.second + loaded.third;
  mov edi, DWORD PTR [rbp-80]
  mov edx, eax
  add edx, edi
  mov eax, DWORD PTR [rbp-88]
  mov edi, edx
  add edi, eax
  mov eax, DWORD PTR [rbp-84]
  mov DWORD PTR [rbp-8], eax
  mov eax, edi
  add eax, DWORD PTR [rbp-8]
  add rsp, 128
  pop rbp
  ret
