lexion_lang/tests/snapshots/x86_smoke__x86_smoke_bitwise_and_shift_operators.snap
---
source: lexion_lang/tests/x86_smoke.rs
expression: "compile_x86(\"backend/x86_bitwise_shift.lex\")"
snapshot_kind: text
---
.intel_syntax noprefix
.text
.global main
main:
# fn main() -> i32 {
  push rbp
  mov rbp, rsp
  sub rsp, 16
#     let mask = (14 & 11) | (1 << 3);
  mov eax, 14
  and eax, 11
  mov edi, 1
  mov ecx, 3
  shl edi, cl
  mov esi, eax
  or esi, edi
  mov eax, esi
#     let shifted = mask >> 1;
  mov edi, eax
  mov ecx, 1
  sar edi, cl
  mov eax, edi
  mov DWORD PTR [rbp-4], eax
#     return shifted ^ ~2;
  mov edi, 2
  not edi
  mov eax, DWORD PTR [rbp-4]
  xor eax, edi
  add rsp, 16
  pop rbp
  ret
